solution of the task v1.2 after required changes by Mate mentor Olena Bruyako